feat: bot newsletter
